# granpost

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
data/: RememberWhen.csv
data/input/: README.md  RememberWhen.csv  sample_profile.csv
data/output/: profiles.json
src/granpost/: cli.py  config.py  generator.py  ingestion.py  main.py  shaping.py
src/granpost/schemas/: caption_gen.py  page_profile.py
tests/: test_smoke.py
