[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "granpost"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "openai >= 2.7.1",
    "python-dotenv",
    "pandas"
    ]
authors = [
    {name = "Jermaine Steele"}
]
description = "AI-powered Content Engine"
readme = "README.md"
license = "MIT"
keywords = ["ai", "automation", "openai", "social"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP"
]

[project.urls]
Repository = "https://github.com/jermainewakeup/granpost"

[project.scripts]
granpost = "granpost.cli:main"

# ---- Packaging (src/ layout) ----
[tool.hatch.build.targets.wheel]
packages = ["src/granpost"]

[tool.hatch.build.targets.sdist]
include = ["src/granpost", "README.md", "pyproject.toml"]

# ---- Code style / lint ----
[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
extend-select = ["I"]  # turn on import-sorting rules

[tool.ruff.lint.isort]
known-first-party = ["granpost"]

[project.optional-dependencies]
dev = [
  "pytest",
  "pre-commit",
  "ruff",
    "black",
]
